Added the Time boy

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script type="text/javascript" src="./assets/script.js"></script>
+    <script type="text/javascript" src="assets/script.js"></script>
 
     <!-- link your javascript files here. (Must be after jquery is linked!
       You should be able to explain why that is to be "employer ready".) -->
